fix user-profile header z-index #191

--- a/drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/layout/header.scss
@@ -243,7 +243,7 @@ category: Layout - Header
     margin-bottom: 30px;
     @media only screen and (min-width: $screen-sm-min) {text-align: center;}
     position: relative;
-    z-index: 2;
+    z-index: 1;
 
     @media only screen and (max-width: $screen-xs-max) {
       .team-avatar + p {
